z-index issue fixed

--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ nav {
   border: 2px solid var(--primary-color);
   border-radius: 10px;
   overflow-y: auto;
+  z-index: 2;
 }
 nav button {
   margin: 0;
@@ -139,6 +140,7 @@ nav a:hover {
   top: 80px;
   right: 0px;
   transition: all 0.2s ease;
+  z-index: 2;
 }
 #navBtn:active {
   background-color: white;
